Put searchbox(es) in header, fixed too wide footer, bootprint resizing.

--- a/themes/bootprint3/less/core.less
+++ b/themes/bootprint3/less/core.less
@@ -20,14 +20,35 @@ body {
   border-color:darken(@brand-primary, 10%);
   font-weight:bold;
 }
-.container {
+header,.container,footer {
   background:#FFF;
-  border-radius:5px;
-  margin:18px auto;
+  margin:0 auto;
   padding:2px;
+}
+header {
+  border-radius:5px 5px 0 0;
+  margin-top:18px;
+}
+footer {
+  border-radius:0 0 5px 5px;
+  margin-bottom:18px;
 }
 input[type=checkbox] {
   margin-top:2px;
+  margin:0 auto;
+  padding:0 2px;
+}
+header {
+  .container;
+  border-radius:5px 5px 0 0;
+  margin-top:18px;
+  padding:0 4px;
+}
+footer {
+  .container;
+  border-radius:0 0 5px 5px;
+  margin-bottom:18px;
+  padding:0 4px;
 }
 .nav > li > a {
   padding:5px 10px;
@@ -52,6 +73,12 @@ input[type=checkbox] {
       padding:4px 12px 3px 12px;
     }
   }
+  & > .active {
+    & > a, & > span, & > a:hover, & > span:hover, & > a:focus, & > span:focus {
+      background:@brand-primary;
+      border-color:@brand-primary;
+    }
+  }
 }
 .panel-heading {
   padding:0;
@@ -74,7 +101,7 @@ input[type=checkbox] {
 
 /* --- Header --- */
 header {
-  &.navbar {
+  & .navbar {
     padding:0 5px 0 10px;
     #searchForm {display:none !important}
   }
