--- a/themes/bootstrap3/less/core.less
+++ b/themes/bootstrap3/less/core.less
@@ -12,12 +12,12 @@
       border:1px solid @brand-primary;
       box-shadow:none;
       opacity:.8;
-      &:hover,&:active {
+      &:hover,&:active,&:focus {
         opacity:1;
         background:#FFF;
         border-color:@gray-light;
       }
-      &:active {
+      &:active,&:focus {
         border-color:@brand-primary;
       }
     }
